fix: add missing endpoint to resume the failed subscription from the portal